--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
 </head>
   <body class="bg-white text-neutral-900 antialiased selection:bg-stone-200 selection:text-stone-900">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
